# telepathy-qt

./: .gitmodules
rpm/: mktests.sh.in  nemo-tests-install.patch  runDbusTest.sh.in  runTest.sh.in  telepathy-qt4.changes  telepathy-qt4.spec  telepathy-qt4.yaml  telepathy-qt5.patch  telepathy-qt5.spec  telepathy-qt5.yaml
telepathy-qt/: CMakeLists.txt
telepathy-qt/TelepathyQt/: CMakeLists.txt  TelepathyQt-uninstalled.pc.in  TelepathyQt.pc.in  TelepathyQtConfig.cmake.in  TelepathyQtService-uninstalled.pc.in  TelepathyQtService.pc.in  TelepathyQtServiceConfig.cmake.in  account.cpp  base-call-internal.h  base-channel-internal.h  base-channel.cpp  base-channel.h  base-connection-internal.h  base-connection.cpp  handled-channel-notifier.cpp  handled-channel-notifier.h  service-types.h  stable-interfaces.xml
telepathy-qt/TelepathyQt/Farsight/: CMakeLists.txt  TelepathyQtFarsight-uninstalled.pc.in  TelepathyQtFarsight.pc.in  TelepathyQtFarsightConfig.cmake.in  channel.cpp
telepathy-qt/TelepathyQt/Farstream/: CMakeLists.txt  TelepathyQtFarstream-uninstalled.pc.in  TelepathyQtFarstream.pc.in  TelepathyQtFarstreamConfig.cmake.in
telepathy-qt/cmake/modules/: FindQt5.cmake  TpQtMacros.cmake
telepathy-qt/examples/accounts/: CMakeLists.txt
telepathy-qt/examples/cm/: CMakeLists.txt
telepathy-qt/examples/contact-messenger/: CMakeLists.txt
telepathy-qt/examples/extensions/: CMakeLists.txt
telepathy-qt/examples/file-transfer/: CMakeLists.txt
telepathy-qt/examples/protocols/: CMakeLists.txt
telepathy-qt/examples/roster/: CMakeLists.txt
telepathy-qt/examples/stream-tubes/: CMakeLists.txt
telepathy-qt/spec/: errors.xml
telepathy-qt/tests/dbus/: CMakeLists.txt
telepathy-qt/tests/lib/: CMakeLists.txt
telepathy-qt/tests/lib/glib-helpers/: CMakeLists.txt
